--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -65,7 +65,7 @@ jobs:
       shell: bash
       run: |
         go get google.golang.org/grpc/cmd/protoc-gen-go-grpc
-        INCLUDE_LONG_RUNNING=true COHERENCE_VERSION=22.06.2 make clean generate-proto build-test-images test-e2e-standalone
+        INCLUDE_LONG_RUNNING=true PROFILES=,-jakarta,javax COHERENCE_VERSION=22.06.3 make clean generate-proto build-test-images test-e2e-standalone
 
     - name: E2E Local Tests SSL
       shell: bash
@@ -74,7 +74,7 @@ jobs:
           COHERENCE_TLS_CERTS_PATH=`pwd`/test/utils/certs/guardians-ca.crt \
           COHERENCE_TLS_CLIENT_CERT=`pwd`/test/utils/certs/star-lord.crt \
           COHERENCE_TLS_CLIENT_KEY=`pwd`/test/utils/certs/star-lord.key \
-          COHERENCE_VERSION=22.06.2 PROFILES=,secure make clean certs generate-proto build-test-images test-e2e-standalone
+          COHERENCE_VERSION=22.06.2 PROFILES=,secure,-jakarta,javax make clean certs generate-proto build-test-images test-e2e-standalone
 
     - uses: actions/upload-artifact@v1
       if: failure()
