--- a/.github/workflows/examples.yaml
+++ b/.github/workflows/examples.yaml
@@ -65,7 +65,7 @@ jobs:
       shell: bash
       run: |
         go get google.golang.org/grpc/cmd/protoc-gen-go-grpc
-        COHERENCE_VERSION=22.06.2 make clean generate-proto build-test-images test-cluster-startup test-examples
+        COHERENCE_VERSION=22.06.3 PROFILES=,-jakarta,javax make clean generate-proto build-test-images test-cluster-startup test-examples
         make test-cluster-shutdown || true
 
     - uses: actions/upload-artifact@v1
