--- a/.github/workflows/discovery-snapshot-tests-22.06.yaml
+++ b/.github/workflows/discovery-snapshot-tests-22.06.yaml
@@ -79,9 +79,9 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
-        go-version: 1.18
+        go-version: 1.19
 
-    - name: Verify Coherence CLI
+    - name: Verify Coherence Discovery
       env:
         COH_BRANCH: ${{ matrix.branch }}
       shell: bash
