--- a/.github/workflows/discovery-snapshot-tests.yaml
+++ b/.github/workflows/discovery-snapshot-tests.yaml
@@ -81,7 +81,7 @@ jobs:
       with:
         go-version: 1.19
 
-    - name: Verify Coherence CLI
+    - name: Verify Coherence Discovery
       env:
         COH_BRANCH: ${{ matrix.branch }}
       shell: bash
