--- a/.github/workflows/examples.yaml
+++ b/.github/workflows/examples.yaml
@@ -61,7 +61,7 @@ jobs:
       run: |
         make copyright
 
-    - name: Examples Tests
+    - name: Verify Examples
       shell: bash
       run: |
         go get google.golang.org/grpc/cmd/protoc-gen-go-grpc
