--- a/.github/workflows/discovery-snapshot-tests-22.06.yaml
+++ b/.github/workflows/discovery-snapshot-tests-22.06.yaml
@@ -22,8 +22,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        branch:
-          - v22.06
+        coherenceVersion:
+          - 22.06.4-SNAPSHOT
+          - 22.06.5-SNAPSHOT
 
 #   Checkout the source, we need a depth of zero to fetch all of the history otherwise
 #   the copyright check cannot work out the date of the files from Git.
@@ -42,24 +43,6 @@ jobs:
       with:
         java-version: '11'
         distribution: 'zulu'
-
-    - name: Build Coherence Snapshot
-      shell: bash
-      env:
-        COH_BRANCH: ${{ matrix.branch }}
-        MAVEN_OPTS: -Dhttp.keepAlive=false -Dmaven.wagon.http.pool=false
-      run: |
-        # Checkout the git repo for coherence snapshot and build
-        DIR=`pwd`
-        CLONE_DIR=coherence-$COH_BRANCH
-        cd /tmp
-        git clone https://github.com/oracle/coherence.git $CLONE_DIR
-        cd $CLONE_DIR/prj
-        if [ "$COH_BRANCH" != "main" ] ; then
-            git checkout $COH_BRANCH
-        fi
-        make all
-        cd $DIR
 
     - name: Cache Go Modules
       uses: actions/cache@v3
@@ -83,16 +66,9 @@ jobs:
 
     - name: Verify Coherence Discovery
       env:
-        COH_BRANCH: ${{ matrix.branch }}
+        COH_VERSION: ${{ matrix.coherenceVersion }}
       shell: bash
       run: |
-        CLONE_DIR=coherence-$COH_BRANCH
-        POM_FILE=/tmp/${CLONE_DIR}/prj/coherence-bom/pom.xml
-        if [ ! -r $POM_FILE ] ; then
-           POM_FILE=/tmp/${CLONE_DIR}/prj/pom.xml
-        fi
-        COH_VERSION=`cat ${POM_FILE} | grep '<revision>' | sed -e 's,^.*<revision>,,' -e 's,</revision>.*$,,'`
-
         echo "Running verify against $COH_VERSION"
         COHERENCE_VERSION=$COH_VERSION make clean test-clean test-discovery
 
