--- a/.github/workflows/examples-jakarta.yaml
+++ b/.github/workflows/examples-jakarta.yaml
@@ -1,31 +1,24 @@
-# Copyright 2022, 2023 Oracle Corporation and/or its affiliates.
+# Copyright 2023 Oracle Corporation and/or its affiliates.
 # Licensed under the Universal Permissive License v 1.0 as shown at
 # https://oss.oracle.com/licenses/upl.
 
 # ---------------------------------------------------------------------------
-# Coherence Go Client GitHub Actions CI build Against Snapshots
+# Coherence Go Client GitHub Actions test examples against v23.03+
 # ---------------------------------------------------------------------------
-name: CI Snapshots
+name: CI-Examples-Jakarta
 
 on:
   workflow_dispatch:
   push:
     branches:
       - '*'
-  schedule:
-    # Every day at midnight
-    - cron: '0 0 * * *'
+    matrix:
+      coherenceVersion:
+        - 23.03-SNAPSHOT
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        coherenceVersion:
-          - 23.03-SNAPSHOT
-          - 22.06.4-SNAPSHOT
-          - 22.06.5-SNAPSHOT
 
 #   Checkout the source, we need a depth of zero to fetch all of the history otherwise
 #   the copyright check cannot work out the date of the files from Git.
@@ -37,9 +30,10 @@ jobs:
     - name: Get Docker Images
       shell: bash
       run: |
-        docker pull gcr.io/distroless/java17
+        docker pull gcr.io/distroless/java:11
+        uname -a
 
-    - name: Set up JDK 17 for Build
+    - name: Set up JDK
       uses: actions/setup-java@v3
       with:
         java-version: '17'
@@ -65,26 +59,17 @@ jobs:
       with:
         go-version: 1.19
 
-    - name: E2E Local Tests
-      env:
-        COH_VERSION: ${{ matrix.coherenceVersion }}
+    - name: Copyright Check
       shell: bash
       run: |
-        go get google.golang.org/grpc/cmd/protoc-gen-go-grpc
-        COHERENCE_BASE_IMAGE=gcr.io/distroless/java17 INCLUDE_LONG_RUNNING=true PROFILES=,jakarta,-javax COHERENCE_VERSION=$COH_VERSION make clean generate-proto build-test-images test-e2e-standalone
+        make copyright
 
-    - name: E2E Local Tests SSL
-      env:
-        COH_VERSION: ${{ matrix.coherenceVersion }}
+    - name: Verify Examples
       shell: bash
       run: |
-        echo "Running verify against $COH_VERSION"
         go get google.golang.org/grpc/cmd/protoc-gen-go-grpc
-        COHERENCE_BASE_IMAGE=gcr.io/distroless/java17 SECURE=true COHERENCE_IGNORE_INVALID_CERTS=true INCLUDE_LONG_RUNNING=true \
-          COHERENCE_TLS_CERTS_PATH=`pwd`/test/utils/certs/guardians-ca.crt \
-          COHERENCE_TLS_CLIENT_CERT=`pwd`/test/utils/certs/star-lord.crt \
-          COHERENCE_TLS_CLIENT_KEY=`pwd`/test/utils/certs/star-lord.key \
-          COHERENCE_VERSION=$COH_VERSION PROFILES=,secure,jakarta,-javax make clean certs generate-proto build-test-images test-e2e-standalone
+        COHERENCE_BASE_IMAGE=gcr.io/distroless/java17 COHERENCE_VERSION=${{ matrix.coherenceVersion }} PROFILES=,jakarta,-javax make clean generate-proto build-test-images test-cluster-startup test-examples
+        make test-cluster-shutdown || true
 
     - uses: actions/upload-artifact@v1
       if: failure()
