--- a/.github/workflows/examples.yaml
+++ b/.github/workflows/examples.yaml
@@ -1,17 +1,23 @@
-# Copyright 2022 Oracle Corporation and/or its affiliates.
+# Copyright 2022, 2023 Oracle Corporation and/or its affiliates.
 # Licensed under the Universal Permissive License v 1.0 as shown at
 # https://oss.oracle.com/licenses/upl.
 
 # ---------------------------------------------------------------------------
-# Coherence Go Client GitHub Actions CI build and test examples
+# Coherence Go Client GitHub Actions test examples against v22.06 versions
 # ---------------------------------------------------------------------------
-name: CI-Examples
+name: CI-Examples-22.06
 
 on:
   workflow_dispatch:
   push:
     branches:
       - '*'
+    matrix:
+      coherenceVersion:
+        - 22.06.4-SNAPSHOT
+        - 22.06.5-SNAPSHOT
+        - 22.06.3
+        - 22.06.2
 
 jobs:
   build:
@@ -65,7 +71,7 @@ jobs:
       shell: bash
       run: |
         go get google.golang.org/grpc/cmd/protoc-gen-go-grpc
-        COHERENCE_VERSION=22.06.3 PROFILES=,-jakarta,javax make clean generate-proto build-test-images test-cluster-startup test-examples
+        COHERENCE_VERSION=${{ matrix.coherenceVersion }} PROFILES=,-jakarta,javax make clean generate-proto build-test-images test-cluster-startup test-examples
         make test-cluster-shutdown || true
 
     - uses: actions/upload-artifact@v1
