--- a/.github/workflows/examples-jakarta.yaml
+++ b/.github/workflows/examples-jakarta.yaml
@@ -12,13 +12,15 @@ on:
   push:
     branches:
       - '*'
-    matrix:
-      coherenceVersion:
-        - 23.03-SNAPSHOT
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        coherenceVersion:
+          - 23.03-SNAPSHOT
 
 #   Checkout the source, we need a depth of zero to fetch all of the history otherwise
 #   the copyright check cannot work out the date of the files from Git.
