--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -69,7 +69,7 @@ jobs:
     - name: E2E Local Tests
       shell: bash
       run: |
-        go get google.golang.org/grpc/cmd/protoc-gen-go-grpc
+        go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
         INCLUDE_LONG_RUNNING=true PROFILES=,-jakarta,javax COHERENCE_VERSION=22.06.3 make clean generate-proto build-test-images test-e2e-standalone
 
     - name: E2E Local Tests SSL
