--- a/.github/workflows/build-snapshots.yaml
+++ b/.github/workflows/build-snapshots.yaml
@@ -77,6 +77,20 @@ jobs:
         name: test-output
         path: build/_output/test-logs
 
+    - name: E2E Local Tests With Scope
+      env:
+        COH_VERSION: ${{ matrix.coherenceVersion }}
+      shell: bash
+      run: |
+        go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
+        COHERENCE_BASE_IMAGE=gcr.io/distroless/java17 COHERENCE_VERSION=$COH_VERSION  PROFILES=,jakarta,-javax,scope make clean generate-proto build-test-images test-e2e-standalone-scope
+
+    - uses: actions/upload-artifact@v3
+      if: failure()
+      with:
+        name: test-output
+        path: build/_output/test-logs
+
     - name: E2E Local Tests SSL
       env:
         COH_VERSION: ${{ matrix.coherenceVersion }}
