--- a/.github/workflows/build-compatability.yaml
+++ b/.github/workflows/build-compatability.yaml
@@ -1,11 +1,11 @@
-# Copyright 2021, 2023 Oracle Corporation and/or its affiliates.
+# Copyright 2022, 2023 Oracle Corporation and/or its affiliates.
 # Licensed under the Universal Permissive License v 1.0 as shown at
 # https://oss.oracle.com/licenses/upl.
 
 # ---------------------------------------------------------------------------
-# Coherence Go Client GitHub Actions CI build Against Snapshots v22.06
+# Coherence Go Client GitHub Actions CI build Against v23.03+
 # ---------------------------------------------------------------------------
-name: CI Snapshots v22.06
+name: CI Compatability Jakarta
 
 on:
   workflow_dispatch:
@@ -23,7 +23,8 @@ jobs:
       fail-fast: false
       matrix:
         coherenceVersion:
-          - 22.06.5-SNAPSHOT
+          - 23.03.1-SNAPSHOT
+          - 23.03
 
 #   Checkout the source, we need a depth of zero to fetch all of the history otherwise
 #   the copyright check cannot work out the date of the files from Git.
@@ -37,10 +38,10 @@ jobs:
       run: |
         docker pull gcr.io/distroless/java17
 
-    - name: Set up JDK 11 for Build
+    - name: Set up JDK 17 for Build
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'zulu'
 
     - name: Cache Go Modules
@@ -68,9 +69,14 @@ jobs:
         COH_VERSION: ${{ matrix.coherenceVersion }}
       shell: bash
       run: |
-        echo "Running verify against $COH_VERSION"
         go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
-        COHERENCE_BASE_IMAGE=gcr.io/distroless/java17 INCLUDE_LONG_RUNNING=true COHERENCE_VERSION=$COH_VERSION PROFILES=,-jakarta,javax make clean generate-proto build-test-images test-e2e-standalone
+        COHERENCE_BASE_IMAGE=gcr.io/distroless/java17 INCLUDE_LONG_RUNNING=true PROFILES=,jakarta,-javax COHERENCE_VERSION=$COH_VERSION make clean generate-proto build-test-images test-e2e-standalone
+
+    - uses: actions/upload-artifact@v3
+      if: failure()
+      with:
+        name: test-output
+        path: build/_output/test-logs
 
     - name: E2E Local Tests With Scope
       env:
@@ -78,13 +84,7 @@ jobs:
       shell: bash
       run: |
         go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
-        COHERENCE_BASE_IMAGE=gcr.io/distroless/java17 COHERENCE_VERSION=$COH_VERSION PROFILES=,-jakarta,javax,scope make clean generate-proto build-test-images test-e2e-standalone-scope
-
-    - uses: actions/upload-artifact@v3
-      if: failure()
-      with:
-        name: test-output
-        path: build/_output/test-logs
+        COHERENCE_BASE_IMAGE=gcr.io/distroless/java17 COHERENCE_VERSION=$COH_VERSION  PROFILES=,jakarta,-javax,scope make clean generate-proto build-test-images test-e2e-standalone-scope
 
     - uses: actions/upload-artifact@v3
       if: failure()
@@ -103,7 +103,7 @@ jobs:
           COHERENCE_TLS_CERTS_PATH=`pwd`/test/utils/certs/guardians-ca.crt \
           COHERENCE_TLS_CLIENT_CERT=`pwd`/test/utils/certs/star-lord.crt \
           COHERENCE_TLS_CLIENT_KEY=`pwd`/test/utils/certs/star-lord.key \
-          COHERENCE_VERSION=$COH_VERSION PROFILES=,secure,-jakarta,javax make clean certs generate-proto build-test-images test-e2e-standalone
+          COHERENCE_VERSION=$COH_VERSION PROFILES=,secure,jakarta,-javax make clean certs generate-proto build-test-images test-e2e-standalone
 
     - uses: actions/upload-artifact@v3
       if: failure()
