--- a/.github/workflows/build-compatability-2206.yaml
+++ b/.github/workflows/build-compatability-2206.yaml
@@ -3,9 +3,9 @@
 # https://oss.oracle.com/licenses/upl.
 
 # ---------------------------------------------------------------------------
-# Coherence Go Client GitHub Actions CI build Against Snapshots v22.06
+# Coherence Go Client GitHub Actions CI build Against v22.06+
 # ---------------------------------------------------------------------------
-name: CI Snapshots v22.06
+name: CI Compatability v22.06
 
 on:
   workflow_dispatch:
@@ -23,7 +23,7 @@ jobs:
       fail-fast: false
       matrix:
         coherenceVersion:
-          - 22.06.4-SNAPSHOT
+          - 22.06.4
           - 22.06.5-SNAPSHOT
 
 #   Checkout the source, we need a depth of zero to fetch all of the history otherwise
@@ -72,6 +72,20 @@ jobs:
         echo "Running verify against $COH_VERSION"
         go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
         COHERENCE_BASE_IMAGE=gcr.io/distroless/java17 INCLUDE_LONG_RUNNING=true COHERENCE_VERSION=$COH_VERSION PROFILES=,-jakarta,javax make clean generate-proto build-test-images test-e2e-standalone
+
+    - name: E2E Local Tests With Scope
+      env:
+        COH_VERSION: ${{ matrix.coherenceVersion }}
+      shell: bash
+      run: |
+        go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
+        COHERENCE_BASE_IMAGE=gcr.io/distroless/java17 COHERENCE_VERSION=$COH_VERSION PROFILES=,-jakarta,javax,scope make clean generate-proto build-test-images test-e2e-standalone-scope
+
+    - uses: actions/upload-artifact@v3
+      if: failure()
+      with:
+        name: test-output
+        path: build/_output/test-logs
 
     - uses: actions/upload-artifact@v3
       if: failure()
