--- a/.github/workflows/build-compatability.yaml
+++ b/.github/workflows/build-compatability.yaml
@@ -3,9 +3,9 @@
 # https://oss.oracle.com/licenses/upl.
 
 # ---------------------------------------------------------------------------
-# Coherence Go Client GitHub Actions CI build Against Snapshots v23.03+
+# Coherence Go Client GitHub Actions CI build Against v23.03+
 # ---------------------------------------------------------------------------
-name: CI Snapshots Jakarta
+name: CI Compatability Jakarta
 
 on:
   workflow_dispatch:
@@ -24,6 +24,7 @@ jobs:
       matrix:
         coherenceVersion:
           - 23.03.1-SNAPSHOT
+          - 23.03
 
 #   Checkout the source, we need a depth of zero to fetch all of the history otherwise
 #   the copyright check cannot work out the date of the files from Git.
@@ -70,6 +71,20 @@ jobs:
       run: |
         go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
         COHERENCE_BASE_IMAGE=gcr.io/distroless/java17 INCLUDE_LONG_RUNNING=true PROFILES=,jakarta,-javax COHERENCE_VERSION=$COH_VERSION make clean generate-proto build-test-images test-e2e-standalone
+
+    - uses: actions/upload-artifact@v3
+      if: failure()
+      with:
+        name: test-output
+        path: build/_output/test-logs
+
+    - name: E2E Local Tests With Scope
+      env:
+        COH_VERSION: ${{ matrix.coherenceVersion }}
+      shell: bash
+      run: |
+        go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
+        COHERENCE_BASE_IMAGE=gcr.io/distroless/java17 COHERENCE_VERSION=$COH_VERSION  PROFILES=,jakarta,-javax,scope make clean generate-proto build-test-images test-e2e-standalone-scope
 
     - uses: actions/upload-artifact@v3
       if: failure()
