--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,6 +16,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go-version:
+          - 1.19.x
+          - 1.20.x
+          - 1.21.x
 
 #   Checkout the source, we need a depth of zero to fetch all of the history otherwise
 #   the copyright check cannot work out the date of the files from Git.
@@ -52,9 +58,9 @@ jobs:
         restore-keys: ${{ runner.os }}-m2
 
     - name: Set up Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@vv
       with:
-        go-version: 1.19
+        go-version: '${{ matrix.go-version }}'
 
     - name: Copyright Check
       shell: bash
