--- a/.github/workflows/build-compatability.yaml
+++ b/.github/workflows/build-compatability.yaml
@@ -25,6 +25,10 @@ jobs:
         coherenceVersion:
           - 23.03.2-SNAPSHOT
           - 23.03.1
+        go-version:
+          - 1.19.x
+          - 1.20.x
+          - 1.21.x
 
 #   Checkout the source, we need a depth of zero to fetch all of the history otherwise
 #   the copyright check cannot work out the date of the files from Git.
@@ -60,9 +64,9 @@ jobs:
         restore-keys: ${{ runner.os }}-m2
 
     - name: Set up Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v4
       with:
-        go-version: 1.19
+        go-version: '${{ matrix.go-version }}'
 
     - name: E2E Local Tests
       env:
