--- a/.github/workflows/examples.yaml
+++ b/.github/workflows/examples.yaml
@@ -22,6 +22,10 @@ jobs:
         coherenceVersion:
           - 22.06.6-SNAPSHOT
           - 22.06.5
+        go-version:
+          - 1.19.x
+          - 1.20.x
+          - 1.21.x
 
 #   Checkout the source, we need a depth of zero to fetch all of the history otherwise
 #   the copyright check cannot work out the date of the files from Git.
@@ -58,9 +62,9 @@ jobs:
         restore-keys: ${{ runner.os }}-m2
 
     - name: Set up Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v4
       with:
-        go-version: 1.19
+        go-version: '${{ matrix.go-version }}'
 
     - name: Copyright Check
       shell: bash
