--- a/.github/workflows/build-queues.yaml
+++ b/.github/workflows/build-queues.yaml
@@ -24,6 +24,7 @@ jobs:
       matrix:
         coherenceVersion:
           - 24.03
+          - 24.03.1-SNAPSHOT
         go-version:
           - 1.19.x
           - 1.20.x
