--- a/java/coherence-go-test/pom.xml
+++ b/java/coherence-go-test/pom.xml
@@ -59,10 +59,7 @@
     <profile>
       <id>queues</id>
       <activation>
-        <!-- This is a work-around for the fact that activeByDefault does not do what you'd think it should -->
-        <file>
-          <exists>.</exists>
-        </file>
+        <activeByDefault>false</activeByDefault>
       </activation>
       <dependencies>
         <dependency>
