Update memory for contains

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -34,7 +34,7 @@
     <maven.compiler.target>11</maven.compiler.target>
 
     <coherence.group.id>com.oracle.coherence.ce</coherence.group.id>
-    <coherence.version>22.06.7</coherence.version>
+    <coherence.version>22.06.8</coherence.version>
 
     <!-- The version of Coherence to use in the test images -->
     <coherence.test.groupId>com.oracle.coherence.ce</coherence.test.groupId>
@@ -211,6 +211,8 @@
               </from>
               <container>
                 <jvmFlags>
+                  <jvmFlag>-Xmx2g</jvmFlag>
+                  <jvmFlag>-Xms2g</jvmFlag>
                   <jvmFlag>-Dcoherence.scope=${coherence.scope}</jvmFlag>
                   <jvmFlag>-Dcoherence.wka=server1</jvmFlag>
                   <jvmFlag>-Dcoherence.cluster=cluster1</jvmFlag>
@@ -257,6 +259,8 @@
               </from>
               <container>
                 <jvmFlags>
+                  <jvmFlag>-Xmx2g</jvmFlag>
+                  <jvmFlag>-Xms2g</jvmFlag>
                   <jvmFlag>-Dcoherence.scope=${coherence.scope}</jvmFlag>
                   <jvmFlag>-Dcoherence.wka=server1</jvmFlag>
                   <jvmFlag>-Dcoherence.cluster=cluster1</jvmFlag>
