--- a/.github/workflows/build-queues.yaml
+++ b/.github/workflows/build-queues.yaml
@@ -77,8 +77,8 @@ jobs:
         go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
         COHERENCE_BASE_IMAGE=gcr.io/distroless/java17 INCLUDE_LONG_RUNNING=true PROFILES=,jakarta,-javax,queues COHERENCE_VERSION=$COH_VERSION make clean generate-proto build-test-images test-e2e-standalone-queues
 
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v4
       if: failure()
       with:
-        name: test-output
+        name: test-output-${{ matrix.go-version }}-${{ matrix.coherenceVersion }}
         path: build/_output/test-logs
