--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -83,24 +83,24 @@ jobs:
       shell: bash
       run: |
         go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
-        INCLUDE_LONG_RUNNING=true PROFILES=,-jakarta,javax COHERENCE_VERSION=22.06.7 make clean generate-proto build-test-images test-e2e-standalone
+        INCLUDE_LONG_RUNNING=true PROFILES=,-jakarta,javax COHERENCE_VERSION=22.06.8 make clean generate-proto build-test-images test-e2e-standalone
 
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@vv
       if: failure()
       with:
-        name: test-output
+        name: test-output-${{ matrix.go-version }}
         path: build/_output/test-logs
 
     - name: E2E Local Tests With Scope
       shell: bash
       run: |
         go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
-        COHERENCE_VERSION=22.06.7 PROFILES=,-jakarta,javax,scope make clean generate-proto build-test-images test-e2e-standalone-scope
+        COHERENCE_VERSION=22.06.8 PROFILES=,-jakarta,javax,scope make clean generate-proto build-test-images test-e2e-standalone-scope
 
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v4
       if: failure()
       with:
-        name: test-output
+        name: test-output-${{ matrix.go-version }}
         path: build/_output/test-logs
 
     - name: E2E Local Tests SSL (env)
@@ -111,7 +111,6 @@ jobs:
           COHERENCE_TLS_CLIENT_CERT=`pwd`/test/utils/certs/star-lord.crt \
           COHERENCE_TLS_CLIENT_KEY=`pwd`/test/utils/certs/star-lord.key \
           COHERENCE_VERSION=22.06.7 PROFILES=,secure,-jakarta,javax make clean certs generate-proto build-test-images test-e2e-standalone
-
 
     - name: E2E Local Tests SSL (options)
       shell: bash
@@ -131,8 +130,8 @@ jobs:
           COHERENCE_TLS_CLIENT_KEY_OPTION=`pwd`/test/utils/certs/star-lord.key \
           COHERENCE_VERSION=22.06.7 PROFILES=,secure,-jakarta,javax,scope make clean certs generate-proto build-test-images test-e2e-standalone-scope
 
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@vv
       if: failure()
       with:
-        name: test-output
+        name: test-output-${{ matrix.go-version }}
         path: build/_output/test-logs
