--- a/.github/workflows/discovery-compatability-tests.yaml
+++ b/.github/workflows/discovery-compatability-tests.yaml
@@ -70,8 +70,8 @@ jobs:
         export COHERENCE_VERSION=${{ matrix.coherenceVersion }}
         make clean test-clean test-discovery
 
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v4
       if: failure()
       with:
-        name: test-output
+        name: test-output-${{ matrix.go-version }}-${{ matrix.coherenceVersion }}
         path: build/_output/test-logs
