--- a/.github/workflows/build-compatability-v1.yaml
+++ b/.github/workflows/build-compatability-v1.yaml
@@ -1,11 +1,11 @@
-# Copyright 2021, 2024 Oracle Corporation and/or its affiliates.
+# Copyright 024 Oracle Corporation and/or its affiliates.
 # Licensed under the Universal Permissive License v 1.0 as shown at
 # https://oss.oracle.com/licenses/upl.
 
 # ---------------------------------------------------------------------------
-# Coherence Go Client GitHub Actions CI build Against v22.06+
+# Coherence Go Client GitHub Actions CI build Against v24.09+ with gRPC v1 API
 # ---------------------------------------------------------------------------
-name: CI Compatability v22.06
+name: CI Compatability Jakarta - V1 gRPC
 
 on:
   workflow_dispatch:
@@ -23,8 +23,8 @@ jobs:
       fail-fast: false
       matrix:
         coherenceVersion:
-          - 22.06.9
-          - 22.06.10-SNAPSHOT
+          - 24.09
+          - 24.09.1-SNAPSHOT
         go-version:
           - 1.19.x
           - 1.20.x
@@ -44,10 +44,10 @@ jobs:
       run: |
         docker pull gcr.io/distroless/java17
 
-    - name: Set up JDK 11 for Build
+    - name: Set up JDK 17 for Build
       uses: actions/setup-java@v4
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'zulu'
 
     - name: Cache Go Modules
@@ -70,22 +70,13 @@ jobs:
       with:
         go-version: '${{ matrix.go-version }}'
 
-    - name: E2E Local Tests
-      env:
-        COH_VERSION: ${{ matrix.coherenceVersion }}
-      shell: bash
-      run: |
-        echo "Running verify against $COH_VERSION"
-        go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
-        COHERENCE_BASE_IMAGE=gcr.io/distroless/java17 INCLUDE_LONG_RUNNING=true COHERENCE_VERSION=$COH_VERSION PROFILES=,-jakarta,javax make clean generate-proto build-test-images test-e2e-standalone
-
-    - name: E2E Local Tests With Scope
+    - name: E2E Local Tests gRPC v1
       env:
         COH_VERSION: ${{ matrix.coherenceVersion }}
       shell: bash
       run: |
         go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
-        COHERENCE_BASE_IMAGE=gcr.io/distroless/java17 COHERENCE_VERSION=$COH_VERSION PROFILES=,-jakarta,javax,scope make clean generate-proto build-test-images test-e2e-standalone-scope
+        COHERENCE_BASE_IMAGE=gcr.io/distroless/java17 INCLUDE_LONG_RUNNING=true PROFILES=,jakarta,-javax COHERENCE_VERSION=$COH_VERSION make clean generate-proto generate-proto-v1 build-test-images test-e2e-standalone
 
     - uses: actions/upload-artifact@v4
       if: failure()
@@ -93,13 +84,21 @@ jobs:
         name: test-output-${{ matrix.go-version }}-${{ matrix.coherenceVersion }}
         path: build/_output/test-logs
 
+    - name: E2E Local Tests With Scope gRPC v1
+      env:
+        COH_VERSION: ${{ matrix.coherenceVersion }}
+      shell: bash
+      run: |
+        go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
+        COHERENCE_BASE_IMAGE=gcr.io/distroless/java17 COHERENCE_VERSION=$COH_VERSION PROFILES=,jakarta,-javax,scope make clean generate-proto generate-proto-v1 build-test-images test-e2e-standalone-scope
+
     - uses: actions/upload-artifact@v4
       if: failure()
       with:
         name: test-output-${{ matrix.go-version }}-${{ matrix.coherenceVersion }}
         path: build/_output/test-logs
 
-    - name: E2E Local Tests SSL
+    - name: E2E Local Tests SSL gRPC v1
       env:
         COH_VERSION: ${{ matrix.coherenceVersion }}
       shell: bash
@@ -110,7 +109,7 @@ jobs:
           COHERENCE_TLS_CERTS_PATH=`pwd`/test/utils/certs/guardians-ca.crt \
           COHERENCE_TLS_CLIENT_CERT=`pwd`/test/utils/certs/star-lord.crt \
           COHERENCE_TLS_CLIENT_KEY=`pwd`/test/utils/certs/star-lord.key \
-          COHERENCE_VERSION=$COH_VERSION PROFILES=,secure,-jakarta,javax make clean certs generate-proto build-test-images test-e2e-standalone
+          COHERENCE_VERSION=$COH_VERSION PROFILES=,secure,jakarta,-javax make clean certs generate-proto generate-proto-v1 build-test-images test-e2e-standalone
 
     - uses: actions/upload-artifact@v4
       if: failure()
