--- a/.github/workflows/examples-jakarta.yaml
+++ b/.github/workflows/examples-jakarta.yaml
@@ -15,18 +15,19 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
       matrix:
         coherenceVersion:
-          - 24.03.2-SNAPSHOT
-          - 24.03.1
+          - 24.09
+          - 24.09.1-SNAPSHOT
         go-version:
           - 1.19.x
           - 1.20.x
           - 1.21.x
           - 1.22.x
+          - 1.23.x
 
 #   Checkout the source, we need a depth of zero to fetch all of the history otherwise
 #   the copyright check cannot work out the date of the files from Git.
