--- a/.github/workflows/examples.yaml
+++ b/.github/workflows/examples.yaml
@@ -15,18 +15,19 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
       matrix:
         coherenceVersion:
-          - 22.06.10-SNAPSHOT
-          - 22.06.9
+          - 22.06.11-SNAPSHOT
+          - 22.06.10
         go-version:
           - 1.19.x
           - 1.20.x
           - 1.21.x
           - 1.22.x
+          - 1.23.x
 
 #   Checkout the source, we need a depth of zero to fetch all of the history otherwise
 #   the copyright check cannot work out the date of the files from Git.
