--- a/.github/workflows/build-v1.yaml
+++ b/.github/workflows/build-v1.yaml
@@ -26,9 +26,8 @@ jobs:
           - 1.22.x
           - 1.23.x
         coherence-version:
-          - 24.09
-          - 24.09.2
-          - 24.09.3-SNAPSHOT
+          - 24.09.3
+          - 24.09.4-SNAPSHOT
 
 #   Checkout the source, we need a depth of zero to fetch all of the history otherwise
 #   the copyright check cannot work out the date of the files from Git.
@@ -40,8 +39,8 @@ jobs:
     - name: Get Docker Images
       shell: bash
       run: |
-        docker pull gcr.io/distroless/java17
-        docker pull gcr.io/distroless/java:11
+        docker pull gcr.io/distroless/java17-debian12
+        docker pull gcr.io/distroless/java11-debian12
         uname -a
 
     - name: Set up JDK
@@ -74,7 +73,7 @@ jobs:
       shell: bash
       run: |
         go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
-        COHERENCE_BASE_IMAGE=gcr.io/distroless/java17 PROFILES=,jakarta,-javax COHERENCE_VERSION=${{ matrix.coherence-version }} make clean generate-proto generate-proto-v1 build-test-images test-v1-base
+        COHERENCE_BASE_IMAGE=gcr.io/distroless/java17-debian12 PROFILES=,jakarta,-javax COHERENCE_VERSION=${{ matrix.coherence-version }} make clean generate-proto generate-proto-v1 build-test-images test-v1-base
 
     - uses: actions/upload-artifact@v4
       if: failure()
