--- a/.github/workflows/examples-jakarta.yaml
+++ b/.github/workflows/examples-jakarta.yaml
@@ -20,9 +20,8 @@ jobs:
       fail-fast: false
       matrix:
         coherenceVersion:
-          - 24.09
-          - 24.09.2
-          - 24.09.1-SNAPSHOT
+          - 24.09.3
+          - 24.09.4-SNAPSHOT
         go-version:
           - 1.19.x
           - 1.20.x
@@ -40,7 +39,7 @@ jobs:
     - name: Get Docker Images
       shell: bash
       run: |
-        docker pull gcr.io/distroless/java17
+        docker pull gcr.io/distroless/java17-debian12
         uname -a
 
     - name: Set up JDK
@@ -73,7 +72,7 @@ jobs:
       shell: bash
       run: |
         go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
-        COHERENCE_BASE_IMAGE=gcr.io/distroless/java17 COHERENCE_VERSION=${{ matrix.coherenceVersion }} PROFILES=,jakarta,-javax make clean generate-proto build-test-images test-cluster-startup test-examples
+        COHERENCE_BASE_IMAGE=gcr.io/distroless/java17-debian12 COHERENCE_VERSION=${{ matrix.coherenceVersion }} PROFILES=,jakarta,-javax make clean generate-proto build-test-images test-cluster-startup test-examples
         make test-cluster-shutdown || true
 
     - uses: actions/upload-artifact@v4
