--- a/.github/workflows/examples-v1.2.2.yaml
+++ b/.github/workflows/examples-v1.2.2.yaml
@@ -41,7 +41,7 @@ jobs:
     - name: Get Docker Images
       shell: bash
       run: |
-        docker pull gcr.io/distroless/java:11
+        docker pull gcr.io/distroless/java11-debian12
         uname -a
 
     - name: Set up JDK
