--- a/.github/workflows/examples.yaml
+++ b/.github/workflows/examples.yaml
@@ -43,7 +43,7 @@ jobs:
     - name: Get Docker Images
       shell: bash
       run: |
-        docker pull gcr.io/distroless/java17
+        docker pull gcr.io/distroless/java17-debian12
 
     - name: Set up JDK
       uses: actions/setup-java@v4
@@ -75,7 +75,7 @@ jobs:
       shell: bash
       run: |
         go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
-        COHERENCE_BASE_IMAGE=gcr.io/distroless/java17 COHERENCE_VERSION=${{ matrix.coherenceVersion }} PROFILES=,-jakarta,javax make clean generate-proto generate-proto-v1 build-test-images test-cluster-startup test-examples
+        COHERENCE_BASE_IMAGE=gcr.io/distroless/java17-debian12 COHERENCE_VERSION=${{ matrix.coherenceVersion }} PROFILES=,-jakarta,javax make clean generate-proto generate-proto-v1 build-test-images test-cluster-startup test-examples
         make test-cluster-shutdown || true
 
     - uses: actions/upload-artifact@v4
