--- a/.github/workflows/examples-v1.2.2.yaml
+++ b/.github/workflows/examples-v1.2.2.yaml
@@ -41,7 +41,7 @@ jobs:
     - name: Get Docker Images
       shell: bash
       run: |
-        docker pull gcr.io/distroless/java:11
+        docker pull gcr.io/distroless/java11-debian11
         uname -a
 
     - name: Set up JDK
@@ -77,7 +77,7 @@ jobs:
         # Change the jib-maven-plugin as this version fails
         sed -i.bak 's/<version.plugin.jib>3\.3\.0<\/version.plugin.jib>/<version.plugin.jib>3.4.3<\/version.plugin.jib>/' java/pom.xml
         go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0
-        COHERENCE_VERSION=${{ matrix.coherenceVersion }} PROFILES=,-jakarta,javax make clean generate-proto build-test-images test-cluster-startup test-examples
+        COHERENCE_BASE_IMAGE=gcr.io/distroless/java11-debian11 COHERENCE_VERSION=${{ matrix.coherenceVersion }} PROFILES=,-jakarta,javax make clean generate-proto build-test-images test-cluster-startup test-examples
         make test-cluster-shutdown || true
 
     - uses: actions/upload-artifact@v4
